Definição width e height das imagens

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="description" content="Termos e Condições." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="./css/style.css" rel="preload" as="style">
-         <link href="./css/style.css" rel="stylesheet">
+        <link href="./css/style.css" rel="preload" as="style" />
+        <link href="./css/style.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -13,12 +13,18 @@
             rel="stylesheet"
         />
 
-        <title>Bicicletas</title>
+        <title>Bicicletas.</title>
     </head>
     <body id="bicicletas">
         <header class="header-bg">
             <div class="header">
-                <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" /></a>
+                <a href="./"
+                    ><img
+                        src="./img/bikcraft.svg"
+                        width="136"
+                        height="32"
+                        alt="Bikcraft"
+                /></a>
                 <nav aria-label="primaria">
                     <ul class="header-menu font-1-m cor-0">
                         <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -43,7 +49,9 @@
                 <div class="bicicletas container">
                     <div class="bicicletas-imagem">
                         <img
-                            src="./img/bicicletas/nimbus.jpg" width="1120" height="680"
+                            src="./img/bicicletas/nimbus.jpg"
+                            width="1120"
+                            height="680"
                             alt="Bicicleta preta"
                         />
                         <span class="font-2-m cor-0">R$ 4999</span>
@@ -58,30 +66,40 @@
                         <ul class="font-1-m cor-8">
                             <li>
                                 <img
-                                    src="./img/icones/eletrica.svg" width="24" height="24"
+                                    src="./img/icones/eletrica.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Motor Elétrico
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/carbono.svg" width="24" height="24"
+                                    src="./img/icones/carbono.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Fibra de Carbono
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/velocidade.svg" width="24" height="24"
+                                    src="./img/icones/velocidade.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />50 km/h
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/rastreador.svg" width="24" height="24"
+                                    src="./img/icones/rastreador.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Rastreador
                             </li>
                         </ul>
-                        <a class="botao seta" href="./bicicletas/nimbus.html">MAIS SOBRE</a>
+                        <a class="botao seta" href="./bicicletas/nimbus.html"
+                            >MAIS SOBRE</a
+                        >
                     </div>
                 </div>
             </div>
@@ -89,7 +107,9 @@
                 <div class="bicicletas container">
                     <div class="bicicletas-imagem">
                         <img
-                            src="./img/bicicletas/magic.jpg" width="1120" height="680"
+                            src="./img/bicicletas/magic.jpg"
+                            width="1120"
+                            height="680"
                             alt="Bicicleta preta"
                         />
                         <span class="font-2-m cor-0">R$ 2499</span>
@@ -104,30 +124,40 @@
                         <ul class="font-1-m cor-5">
                             <li>
                                 <img
-                                    src="./img/icones/eletrica.svg" width="24" height="24"
+                                    src="./img/icones/eletrica.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Motor Elétrico
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/carbono.svg" width="24" height="24"
+                                    src="./img/icones/carbono.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Fibra de Carbono
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/velocidade.svg" width="24" height="24"
+                                    src="./img/icones/velocidade.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />45 km/h
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/rastreador.svg" width="24" height="24"
+                                    src="./img/icones/rastreador.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Rastreador
                             </li>
                         </ul>
-                        <a class="botao seta" href="./bicicletas/magic.html">MAIS SOBRE</a>
+                        <a class="botao seta" href="./bicicletas/magic.html"
+                            >MAIS SOBRE</a
+                        >
                     </div>
                 </div>
             </div>
@@ -135,7 +165,9 @@
                 <div class="bicicletas container">
                     <div class="bicicletas-imagem">
                         <img
-                            src="./img/bicicletas/nebula.jpg" width="1120" height="680"
+                            src="./img/bicicletas/nebula.jpg"
+                            width="1120"
+                            height="680"
                             alt="Bicicleta preta"
                         />
                         <span class="font-2-m cor-0">R$ 3999</span>
@@ -143,35 +175,47 @@
                     <div class="bicicletas-conteudo">
                         <h2 class="font-1-xl">Nebula Cosmic</h2>
                         <p class="font-2-s cor-8">
-                            A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
+                            A Nebula Cosmic é a melhor Bikcraft já criada pela
+                            nossa equipe. Ela vem equipada com os melhores
+                            acessórios, o que garante maior velocidade.
                         </p>
                         <ul class="font-1-m cor-8">
                             <li>
                                 <img
-                                    src="./img/icones/eletrica.svg" width="24" height="24"
+                                    src="./img/icones/eletrica.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Motor Elétrico
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/carbono.svg" width="24" height="24"
+                                    src="./img/icones/carbono.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Fibra de Carbono
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/velocidade.svg" width="24" height="24"
+                                    src="./img/icones/velocidade.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />50 km/h
                             </li>
                             <li>
                                 <img
-                                    src="./img/icones/rastreador.svg" width="24" height="24"
+                                    src="./img/icones/rastreador.svg"
+                                    width="24"
+                                    height="24"
                                     alt=""
                                 />Rastreador
                             </li>
                         </ul>
-                        <a class="botao seta" href="./bicicletas/nebula.html">MAIS SOBRE</a>
+                        <a class="botao seta" href="./bicicletas/nebula.html"
+                            >MAIS SOBRE</a
+                        >
                     </div>
                 </div>
             </div>
@@ -179,7 +223,12 @@
 
         <footer class="footer-bg">
             <div class="footer container">
-                <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
+                <img
+                    src="./img/bikcraft.svg"
+                    width="136"
+                    height="32"
+                    alt="Bikcraft"
+                />
                 <div class="footer-contato">
                     <h3 class="font2-l-b cor-0">CONTATO</h3>
                     <ul class="font-2-m cor-5">
@@ -197,21 +246,27 @@
                     <div class="footer-redes">
                         <a href="./"
                             ><img
-                                src="./img/redes/instagram.svg" width="32" height="32"
+                                src="./img/redes/instagram.svg"
+                                width="32"
+                                height="32"
                                 alt="Instagram"
                                 width="32"
                                 height="32"
                         /></a>
                         <a href="./"
                             ><img
-                                src="./img/redes/facebook.svg" width="32" height="32"
+                                src="./img/redes/facebook.svg"
+                                width="32"
+                                height="32"
                                 alt="Facebook"
                                 width="32"
                                 height="32"
                         /></a>
                         <a href="./"
                             ><img
-                                src="./img/redes/youtube.svg" width="32" height="32"
+                                src="./img/redes/youtube.svg"
+                                width="32"
+                                height="32"
                                 alt="Youtube"
                                 width="32"
                                 height="32"
