Site finalizado do curso de HTML e CSS

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -13,7 +13,9 @@
             rel="stylesheet"
         />
 
-        <title>Bicicletas.</title>
+        <title>Bicicletas
+
+        </title>
     </head>
     <body id="bicicletas">
         <header class="header-bg">
